AUTOMAKE_OPTIONS = gnu
bin_PROGRAMS = rkrellm
noinst_HEADERS = rkrellm.h rkrellmError.h rkrellmDisplay.h rkrellmStats.h rkrellmGeneral.h rkrellmUser.h \
rkrellmLoad.h rkrellmMemory.h rkrellmNetwork.h rkrellmProc.h rkrellmDisk.h rkrellmBattery.h \
rkrellmDisplayColors.h rkrellmDisplaySizes.h rkrellmMenu.h
rkrellm_SOURCES = rkrellmError.c rkrellmDisplay.c rkrellmStats.c rkrellmGeneral.c rkrellmUser.c \
rkrellmLoad.c rkrellmMemory.c rkrellmNetwork.c rkrellmProc.c rkrellmDisk.c rkrellmBattery.c rkrellmMenu.c rkrellm.c

# we want these in the dist tarball
